--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
 
     <!-- navigation -->
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>
+            <a href="./index.html">Hori<span class="seo">seo</span>n</a> 
+        </h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,7 +26,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
     <!-- hero/jumbotron -->
