--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <!-- navigation -->
-    <header class="header">
+    <header>
         <h1>
             <a href="./index.html">Hori<span class="seo">seo</span>n</a> 
         </h1>
